# mundane

./: .bandit  .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  mundane.py  pyproject.toml  requirements.txt  schema.sql  test_db_check.py  test_extraction.py  test_migration_upgrade.py  test_plugin_output.py  test_tuples.py  workflow_mappings.yaml
.github/workflows/: security.yml  test.yml
docs/: ADDING_TOOLS_QUICKSTART.md  DATABASE.md  ERROR_HANDLING.md  TOOL_SYSTEM_GUIDE.md
mundane_pkg/: __init__.py  _version.py  analysis.py  ansi.py  banner.py  config.py  constants.py  cve_operations.py  database.py  enums.py  fs.py  logging_setup.py  models.py  nessus_export.py  nessus_import.py  netexec_query.py  ops.py  parsing.py  render.py  session.py  tool_context.py  tool_definitions.py  tool_registry.py  tools.py  tui.py  workflow_mapper.py  workflow_mappings.yaml
mundane_pkg/migrations/: __init__.py  migration_001_plugin_output.py  migration_002_remove_filesystem_columns.py  migration_003_foundation_tables.py  migration_004_host_normalization.py  migration_005_cleanup_views.py
tests/: conftest.py  test_cve_operations.py  test_database.py  test_fs.py  test_models.py  test_nessus_export.py  test_nessus_import.py  test_netexec_query.py  test_ops.py  test_parsing.py  test_session.py  test_version.py
tests/fixtures/: GOAD.nessus  minimal.nessus
tests/fixtures/netexec/: ftp.db  ldap.db  mssql.db  nfs.db  populate_fixtures.py  rdp.db  smb.db  ssh.db  winrm.db  wmi.db
